--- a/NN/data/feature_engineering.ipynb
+++ b/NN/data/feature_engineering.ipynb
@@ -877,10 +877,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "6e574ac2-a483-4fdb-8eff-f2233ac715e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/okamitah/Projects/trading-bot/.venv/lib/python3.13/site-packages/mpl_finance.py:16: DeprecationWarning: \n",
+      "\n",
+      "  =================================================================\n",
+      "\n",
+      "   WARNING: `mpl_finance` is deprecated:\n",
+      "\n",
+      "    Please use `mplfinance` instead (no hyphen, no underscore).\n",
+      "\n",
+      "    To install: `pip install --upgrade mplfinance` \n",
+      "\n",
+      "   For more information, see: https://pypi.org/project/mplfinance/\n",
+      "\n",
+      "  =================================================================\n",
+      "\n",
+      "  __warnings.warn('\\n\\n  ================================================================='+\n"
+     ]
+    }
+   ],
    "source": [
     "# Importing necessary libs\n",
     "\n",
@@ -894,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "aed8a49e-4d28-4cfe-add5-395349684897",
    "metadata": {},
    "outputs": [],
@@ -904,6 +926,9 @@
     "btc_data = btc[['Date', 'Open', 'High', 'Low', 'Close']].tail(30).copy()\n",
     "btc_data['Date'] = pd.to_datetime(btc_data['Date'])\n",
     "btc_data = btc_data.dropna(subset=['Date'])\n",
+    "\n",
+    "btc_3d = btc['3d-MA'].tail(30).copy()\n",
+    "btc_10d = btc['10d-MA'].tail(30).copy()\n",
     "\n",
     "btc_data['Open'] = pd.to_numeric(btc_data['Open'], errors='coerce')\n",
     "btc_data['High'] = pd.to_numeric(btc_data['High'], errors='coerce')\n",
@@ -918,6 +943,9 @@
     "btc_values = btc_data[['Date', 'Open', 'High', 'Low', 'Close']].values\n",
     "candlestick_ohlc(ax, btc_values, width=0.6, colorup='g', colordown='r')\n",
     "\n",
+    "plt.plot(btc_data['Date'],btc_3d)\n",
+    "plt.plot(btc_data['Date'],btc_10d)\n",
+    "\n",
     "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
     "\n",
@@ -926,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "f82c70d6-b4e1-4793-8e79-2b0f8befb742",
    "metadata": {},
    "outputs": [],
@@ -938,6 +966,9 @@
     "eth_data['Date'] = pd.to_datetime(eth_data['Date'])\n",
     "\n",
     "eth_data = eth_data.dropna(subset=['Date'])\n",
+    "\n",
+    "eth_3d = eth['3d-MA'].tail(20).copy()\n",
+    "eth_10d = eth['10d-MA'].tail(20).copy()\n",
     "\n",
     "eth_data['Open'] = pd.to_numeric(eth_data['Open'], errors='coerce')\n",
     "eth_data['High'] = pd.to_numeric(eth_data['High'], errors='coerce')\n",
@@ -954,6 +985,9 @@
     "\n",
     "candlestick_ohlc(ax, eth_values, width=0.6, colorup='g', colordown='r')\n",
     "\n",
+    "plt.plot(eth_data['Date'],eth_3d)\n",
+    "plt.plot(eth_data['Date'],eth_10d)\n",
+    "\n",
     "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
     "\n",
@@ -962,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "14708531-f520-4efd-a63e-3ed20548eab9",
    "metadata": {},
    "outputs": [],
@@ -975,6 +1009,9 @@
     "\n",
     "sol_data = sol_data.dropna(subset=['Date'])\n",
     "\n",
+    "sol_3d = sol['3d-MA'].tail(25).copy()\n",
+    "sol_10d = sol['10d-MA'].tail(25).copy()\n",
+    "\n",
     "sol_data['Open'] = pd.to_numeric(sol_data['Open'], errors='coerce')\n",
     "sol_data['High'] = pd.to_numeric(sol_data['High'], errors='coerce')\n",
     "sol_data['Low'] = pd.to_numeric(sol_data['Low'], errors='coerce')\n",
@@ -989,6 +1026,9 @@
     "sol_values = sol_data[['Date', 'Open', 'High', 'Low', 'Close']].values\n",
     "\n",
     "candlestick_ohlc(ax, sol_values, width=0.6, colorup='g', colordown='r')\n",
+    "\n",
+    "plt.plot(sol_data['Date'],sol_3d)\n",
+    "plt.plot(sol_data['Date'],sol_10d)\n",
     "\n",
     "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
@@ -998,33 +1038,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "a41e3c83-876e-4b10-b523-5b0f34adf6ba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plotting bnb for the last 40 days\n",
+    "# Plotting bnb for the last 35 days\n",
     "\n",
-    "bnb_data = sol[['Date', 'Open', 'High', 'Low', 'Close']].tail(25).copy()\n",
+    "bnb_data = bnb[['Date', 'Open', 'High', 'Low', 'Close']].tail(35).copy()\n",
     "\n",
-    "sol_data['Date'] = pd.to_datetime(sol_data['Date'])\n",
+    "bnb_data['Date'] = pd.to_datetime(bnb_data['Date'])\n",
     "\n",
-    "sol_data = sol_data.dropna(subset=['Date'])\n",
+    "bnb_data = bnb_data.dropna(subset=['Date'])\n",
     "\n",
-    "sol_data['Open'] = pd.to_numeric(sol_data['Open'], errors='coerce')\n",
-    "sol_data['High'] = pd.to_numeric(sol_data['High'], errors='coerce')\n",
-    "sol_data['Low'] = pd.to_numeric(sol_data['Low'], errors='coerce')\n",
-    "sol_data['Close'] = pd.to_numeric(sol_data['Close'], errors='coerce')\n",
+    "bnb_3d = bnb['3d-MA'].tail(35).copy()\n",
+    "bnb_10d = bnb['10d-MA'].tail(35).copy()\n",
     "\n",
+    "bnb_data['Open'] = pd.to_numeric(bnb_data['Open'], errors='coerce')\n",
+    "bnb_data['High'] = pd.to_numeric(bnb_data['High'], errors='coerce')\n",
+    "bnb_data['Low'] = pd.to_numeric(bnb_data['Low'], errors='coerce')\n",
+    "bnb_data['Close'] = pd.to_numeric(bnb_data['Close'], errors='coerce')\n",
     "\n",
-    "sol_data['Date'] = sol_data['Date'].map(mdates.date2num)\n",
+    "bnb_data['Date'] = bnb_data['Date'].map(mdates.date2num)\n",
     "\n",
     "ax = plt.subplot()\n",
     "ax.xaxis_date()\n",
     "\n",
-    "sol_values = sol_data[['Date', 'Open', 'High', 'Low', 'Close']].values\n",
+    "bnb_values = bnb_data[['Date', 'Open', 'High', 'Low', 'Close']].values\n",
     "\n",
-    "candlestick_ohlc(ax, sol_values, width=0.6, colorup='g', colordown='r')\n",
+    "candlestick_ohlc(ax, bnb_values, width=0.6, colorup='g', colordown='r')\n",
+    "\n",
+    "plt.plot(bnb_data['Date'],bnb_3d, color='blue', label='3D-MA')\n",
+    "plt.plot(bnb_data['Date'],bnb_10d, color='orange', label='10D-MA')\n",
+    "\n",
+    "plt.legend()\n",
     "\n",
     "plt.xticks(rotation=45)\n",
     "plt.tight_layout()\n",
