Exported the feature engineered data to a new directory

--- a/NN/data/feature_engineering.ipynb
+++ b/NN/data/feature_engineering.ipynb
@@ -736,29 +736,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4568/1375947815.py:16: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '457.3340148925781' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/tmp/ipykernel_2723/1375947815.py:16: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '457.3340148925781' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  coin.loc[day, '10d-MA'] = somme / prev\n",
-      "/tmp/ipykernel_4568/1375947815.py:23: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '457.3340148925781' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/tmp/ipykernel_2723/1375947815.py:23: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '457.3340148925781' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  coin.loc[day, '50d-MA'] = somme / prev\n",
-      "/tmp/ipykernel_4568/1375947815.py:30: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '457.3340148925781' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/tmp/ipykernel_2723/1375947815.py:30: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '457.3340148925781' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  coin.loc[day, '100d-MA'] = somme / prev\n",
-      "/tmp/ipykernel_4568/1375947815.py:16: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '320.8840026855469' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/tmp/ipykernel_2723/1375947815.py:16: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '320.8840026855469' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  coin.loc[day, '10d-MA'] = somme / prev\n",
-      "/tmp/ipykernel_4568/1375947815.py:23: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '320.8840026855469' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/tmp/ipykernel_2723/1375947815.py:23: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '320.8840026855469' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  coin.loc[day, '50d-MA'] = somme / prev\n",
-      "/tmp/ipykernel_4568/1375947815.py:30: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '320.8840026855469' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/tmp/ipykernel_2723/1375947815.py:30: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '320.8840026855469' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  coin.loc[day, '100d-MA'] = somme / prev\n",
-      "/tmp/ipykernel_4568/1375947815.py:16: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '0.9510539770126344' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/tmp/ipykernel_2723/1375947815.py:16: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '0.9510539770126344' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  coin.loc[day, '10d-MA'] = somme / prev\n",
-      "/tmp/ipykernel_4568/1375947815.py:23: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '0.9510539770126344' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/tmp/ipykernel_2723/1375947815.py:23: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '0.9510539770126344' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  coin.loc[day, '50d-MA'] = somme / prev\n",
-      "/tmp/ipykernel_4568/1375947815.py:30: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '0.9510539770126344' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/tmp/ipykernel_2723/1375947815.py:30: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '0.9510539770126344' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  coin.loc[day, '100d-MA'] = somme / prev\n",
-      "/tmp/ipykernel_4568/1375947815.py:16: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '1.990769982337952' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/tmp/ipykernel_2723/1375947815.py:16: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '1.990769982337952' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  coin.loc[day, '10d-MA'] = somme / prev\n",
-      "/tmp/ipykernel_4568/1375947815.py:23: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '1.990769982337952' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/tmp/ipykernel_2723/1375947815.py:23: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '1.990769982337952' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  coin.loc[day, '50d-MA'] = somme / prev\n",
-      "/tmp/ipykernel_4568/1375947815.py:30: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '1.990769982337952' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "/tmp/ipykernel_2723/1375947815.py:30: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise an error in a future version of pandas. Value '1.990769982337952' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  coin.loc[day, '100d-MA'] = somme / prev\n"
      ]
     },
@@ -2159,6 +2159,35 @@
     "bnb.fillna(0, inplace=True)\n",
     "\n",
     "bnb.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbacf528-3539-49e9-bcfe-68607a13199d",
+   "metadata": {},
+   "source": [
+    "# **Exporting the data**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2cda20e-37d8-4b07-9710-eed03d1cfd3d",
+   "metadata": {},
+   "source": [
+    "Now we can finally export our feature engineered data and used later for training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "88d567f2-6ab1-4832-a929-aad54469b3c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "btc.to_csv('coins_fe_data/btc.csv')\n",
+    "eth.to_csv('coins_fe_data/eth.csv')\n",
+    "sol.to_csv('coins_fe_data/sol.csv')\n",
+    "bnb.to_csv('coins_fe_data/bnb.csv')"
    ]
   }
  ],
