Done with the general layout, need to debug why 99% accuracy

--- a/NN/training/model_training.ipynb
+++ b/NN/training/model_training.ipynb
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "8bea0907-e3dc-433d-ae9a-8d84835e1737",
    "metadata": {},
    "outputs": [
@@ -662,7 +662,7 @@
        "4  -6.712818          0.0         0.0         0.0  -10.082977  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "f13eb98c-5764-4efc-971f-14e60c474aac",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
        "Name: Close Diff, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,6 +725,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "350a4306-ac59-4a95-9865-c4064b5dd185",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9f432c4f-f6c8-4426-b6ca-65e955d3cb11",
    "metadata": {},
@@ -734,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "76dbc678-6668-4d68-a416-2d4b2af2bcbe",
    "metadata": {},
    "outputs": [
@@ -756,7 +766,7 @@
        "        -0.99598185, -0.01546834]], shape=(2152, 12))"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,17 +799,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "82cfa302-8306-4826-9533-f2c6f070148c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Dataset at 0x79e5e2442650>"
+       "<__main__.Dataset at 0x755c06791d90>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,17 +832,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "bdce3f65-bfa1-4db6-9288-732b1201920a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Dataset at 0x79e5e23c68b0>"
+       "<__main__.Dataset at 0x755c2f907250>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,6 +861,279 @@
     "bnb_test_loader = DataLoader(bnb_test_dataset, batch_size=32, shuffle=False)\n",
     "\n",
     "eth_train_dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57113eb3-b8d5-49a7-b930-e702699941b6",
+   "metadata": {},
+   "source": [
+    "## **3. Model setting**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "875d9f9d-38bc-4297-8bad-267a827b53cd",
+   "metadata": {},
+   "source": [
+    "Now that we've loaded and prepared our data, we can start our training:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "327d5da8-d49f-419e-a01c-87da178f10b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "import torch.optim as optim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "dba7550e-7159-4793-bb4e-24945b1383c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TradingNN(nn.Module):\n",
+    "    def __init__(self, input_dim):\n",
+    "        super(TradingNN, self).__init__()\n",
+    "        self.fc1 = nn.Linear(input_dim, 32)\n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.fc2 = nn.Linear(32, 16)\n",
+    "        self.fc3 = nn.Linear(16, 1)\n",
+    "        self.sigmoid = nn.Sigmoid()\n",
+    "        self.dropout = nn.Dropout(0.2)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.relu(self.fc1(x))\n",
+    "        x = self.dropout(x)\n",
+    "        x = self.relu(self.fc2(x))\n",
+    "        x = self.dropout(x)\n",
+    "        x = self.sigmoid(self.fc3(x))\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9ab30bb9-54d1-4bce-be04-3e34aecfa1e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_dim = X_btc_train.shape[1]\n",
+    "model = TradingNN(input_dim).to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "de4dfa9e-86e5-4e88-81bf-553ca151e91b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer = optim.Adam(model.parameters(), lr=0.001, weight_decay=1e-4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "44b949d9-344f-414a-b326-218aa4567638",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion = nn.MSELoss()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e31c4322-4689-4b44-b9ff-db6af2571529",
+   "metadata": {},
+   "source": [
+    "## **4. Model training**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdacb5e0-23b8-4112-b112-584d2d887ae9",
+   "metadata": {},
+   "source": [
+    "Let's get to iiit! We can finally teach our machine something!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ed06763d-71ea-4f41-b9f4-ca9f0937f520",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/500], Loss: 987449.9351\n",
+      "Epoch [101/500], Loss: 987449.9508\n",
+      "Epoch [201/500], Loss: 987449.9803\n",
+      "Epoch [301/500], Loss: 987449.9513\n",
+      "Epoch [401/500], Loss: 987449.9308\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_epochs = 500\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    running_loss = 0.0\n",
+    "\n",
+    "    for inputs, labels in btc_train_loader:\n",
+    "        inputs, labels = inputs.to(device), labels.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        outputs = model(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        running_loss += loss.item()\n",
+    "\n",
+    "    if epoch % 100 == 0:\n",
+    "        print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {running_loss/len(btc_train_loader):.4f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6342895b-824a-4c82-9f52-ea7bf4bd7b85",
+   "metadata": {},
+   "source": [
+    "## **4. Model evaluation**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "45c82fad-e70a-4d26-a687-b76ffbd2da26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b8dc53b8-0c9a-49f4-8d5b-26adb43d5fb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.99\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.eval()\n",
+    "correct = 0\n",
+    "total = 0\n",
+    "with torch.no_grad():\n",
+    "    for inputs, labels in btc_test_loader:\n",
+    "        inputs, labels = inputs.to(device), labels.to(device)\n",
+    "\n",
+    "        outputs = model(inputs)\n",
+    "        predicted = (outputs > 0.5).float()\n",
+    "\n",
+    "        total += labels.size(0)\n",
+    "        binary_labels = (labels > 0).float()\n",
+    "        correct += (predicted == binary_labels).sum().item()\n",
+    "accuracy = correct / total\n",
+    "print(f\"Test Accuracy: {accuracy:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "005c83d4-1160-4286-8e0d-444be68368c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels: tensor([[ 5.1000e+01],\n",
+      "        [-8.2740e+00],\n",
+      "        [ 2.7678e+02],\n",
+      "        [ 3.1225e+02],\n",
+      "        [ 3.6953e+03],\n",
+      "        [ 4.6190e+00],\n",
+      "        [ 3.0460e+00],\n",
+      "        [ 1.5906e+02],\n",
+      "        [ 1.7909e+03],\n",
+      "        [-1.0461e+03],\n",
+      "        [ 7.2358e+02],\n",
+      "        [ 5.6566e+02],\n",
+      "        [-2.0615e+03],\n",
+      "        [-1.6360e+00],\n",
+      "        [ 1.2009e+02],\n",
+      "        [ 1.2012e+01],\n",
+      "        [ 2.1890e+02],\n",
+      "        [-1.0930e+00],\n",
+      "        [-2.2223e+02],\n",
+      "        [ 1.0603e+02],\n",
+      "        [ 1.7007e+00],\n",
+      "        [ 4.2962e+02],\n",
+      "        [ 1.5817e+02],\n",
+      "        [ 2.0918e+01],\n",
+      "        [ 9.9805e-01],\n",
+      "        [-6.6070e+01],\n",
+      "        [ 8.3620e+02],\n",
+      "        [-4.6290e+01],\n",
+      "        [-2.0840e+00],\n",
+      "        [ 1.2144e+02],\n",
+      "        [ 6.3850e+00],\n",
+      "        [ 2.6946e+00]], device='cuda:0')\n",
+      "Predicted: tensor([[1.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [0.],\n",
+      "        [0.],\n",
+      "        [1.],\n",
+      "        [1.],\n",
+      "        [1.]], device='cuda:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Labels:\", labels)\n",
+    "print(\"Predicted:\", predicted)"
    ]
   }
  ],
